--- a/playground/index.html
+++ b/playground/index.html
@@ -1,4 +1,16 @@
-<script>
+<head>
+  <title>playground: marker</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+</head>
+
+<main class="container">
+  <h1>Marker</h1>
+  <p>Press <kbd>M</kbd> to start</p>
+  <p>Press <kbd>Alt+C</kbd> Clear</p>
+</main>
+
+
+<script type="module">
   import Marker from "../marker.mjs"
 
   Marker.init()().init()
