--- a/playground/index.html
+++ b/playground/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>playground: marker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
 </head>
 
 <main class="container">
